fix(sso): null-safe redirectToFailed
OIDC/SSO 回调失败分支传给 redirectToFailed 的 errorMessage 可能是 null
（e.getMessage() 对 NPE 返回 null、loginRes.getErrMsg() 也可能空），导致
URLEncoder.encode 抛二次 NPE，把真正的错误信息吞掉。改用
StringUtils.defaultString 兜底，charset 统一成 StandardCharsets.UTF_8
与同文件 redirectToLogin 一致。